// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run-on-server id mappings macro re-uses ids between runs if the function content did not change 1`] = `
Object {
  "code": "var createClient = require(\\"run-on-server/client\\");

const runOnServer = createClient(\\"http://localhost:3000\\");

const returnArgsString = args => runOnServer({
        id: \\"c63afd45dad73502a085847e3c5ed5c2\\"
}, args);
const returnArgsFn = args => runOnServer({
        id: \\"6a6bddc58d39854942354973dcd1ce96\\"
}, args);",
  "output": "/*
This file was generated by the run-on-server babel macro. It should not
be edited by hand.

If you want to output this file to a different location, you can
configure the macro by creating a file named \`babel-plugin-macros.config.js\`
in the root of your project with the following content:

const path = require(\\"path\\");
module.exports = {
  runOnServer: {
    outputPath: path.resolve(__dirname, \\"somewhere\\", \\"else.js\\")
  }
};
*/module.exports = {
  \\"c63afd45dad73502a085847e3c5ed5c2\\": \\"args\\",
  \\"6a6bddc58d39854942354973dcd1ce96\\": (...args) => args
};",
}
`;

exports[`run-on-server id mappings macro re-uses ids between runs if the function content did not change 2`] = `
Object {
  "code": "var createClient = require(\\"run-on-server/client\\");

const runOnServer = createClient(\\"http://localhost:3000\\");

// This one shouldn't change id compared to code1
const returnArgsString = args => runOnServer({
        id: \\"c63afd45dad73502a085847e3c5ed5c2\\"
}, args);

// This one should change id compared to code1
const returnArgsFn = args => runOnServer({
        id: \\"df87e7767a69ee3215bb5d639c6e3ac6\\"
}, args);",
  "output": "/*
This file was generated by the run-on-server babel macro. It should not
be edited by hand.

If you want to output this file to a different location, you can
configure the macro by creating a file named \`babel-plugin-macros.config.js\`
in the root of your project with the following content:

const path = require(\\"path\\");
module.exports = {
  runOnServer: {
    outputPath: path.resolve(__dirname, \\"somewhere\\", \\"else.js\\")
  }
};
*/module.exports = {
  \\"c63afd45dad73502a085847e3c5ed5c2\\": \\"args\\",
  \\"df87e7767a69ee3215bb5d639c6e3ac6\\": function () {
    return arguments;
  }
};",
}
`;

exports[`run-on-server id mappings macro replaces the functions and strings in the client code with ids and outputs those functions and strings to the configured output file 1`] = `
Object {
  "code": "var createClient = require(\\"run-on-server/client\\");

const runOnServer = createClient(\\"http://localhost:3000\\");

const returnArgsString = args => runOnServer({
        id: \\"c63afd45dad73502a085847e3c5ed5c2\\"
}, args);
const returnArgsFn = args => runOnServer({
        id: \\"6a6bddc58d39854942354973dcd1ce96\\"
}, args);",
  "output": "/*
This file was generated by the run-on-server babel macro. It should not
be edited by hand.

If you want to output this file to a different location, you can
configure the macro by creating a file named \`babel-plugin-macros.config.js\`
in the root of your project with the following content:

const path = require(\\"path\\");
module.exports = {
  runOnServer: {
    outputPath: path.resolve(__dirname, \\"somewhere\\", \\"else.js\\")
  }
};
*/module.exports = {
  \\"c63afd45dad73502a085847e3c5ed5c2\\": \\"args\\",
  \\"6a6bddc58d39854942354973dcd1ce96\\": (...args) => args
};",
}
`;
